@@ -34,7 +34,7 @@ import getopt
 from repositoryhandler.backends import create_repository, create_repository_from_path
 from ParserFactory import create_parser_from_logfile, create_parser_from_repository
 from Database import (create_database, TableAlreadyExists, AccessDenied, DatabaseNotFound,
-                      DatabaseDriverNotSupported, DBRepository, statement)
+                      DatabaseDriverNotSupported, DBRepository, statement, initialize_ids)
 from DBContentHandler import DBContentHandler
 from Config import Config, ErrorLoadingConfig
 from utils import printerr, printout, uri_to_filename
@@ -233,6 +233,7 @@ def main (argv):
     if db_exists:
         cursor.execute (statement ("SELECT id from repositories where uri = ?", db.place_holder), (repo.get_uri (),))
         rep = cursor.fetchone ()
+        initialize_ids (db, cursor)
         cursor.close ()
         
     if not db_exists or rep is None:
